# keson-spectral-improver-gui

./: .gitignore  DEVELOPMENT.md  README.md  download_binaries.py  index.html  package-lock.json  package.json  vite.config.js
.agent/workflows/: release.md
.github/workflows/: debug-build.yml  release.yml
public/: keson-model.glb
src/: App.svelte  app.css
src-tauri/: Cargo.toml  build.rs  check_output.txt  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json  updater.json.disabled
src-tauri/icons/: icon.icns
src-tauri/resources/: ffmpeg  ffprobe
src-tauri/src/: audio.rs  cache.rs  main.rs  settings.rs  tagging.rs  types.rs
src/components/: ABPlayer.svelte  BugReportModal.svelte  DownloadTab.svelte  DownloadedComparison.svelte  JmodDrawable.svelte  KesonDrawable.svelte  KesonLogo.svelte  ManualUrlModal.svelte  QualityTab.svelte  RedownloadModal.svelte  RegistrationModal.svelte  ScanControls.svelte  ScanRow.svelte  ScanSummary.svelte  SearchTab.svelte  SettingsModal.svelte  TitleBar.svelte  UpdateNotification.svelte
src/services/: matrixRain.js  scanService.js  settingsService.js
