[package]
name = "keson-spectral-improver-gui"
version = "0.9.0"
edition = "2021"
authors = ["keson"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["protocol-asset"] }
walkdir = "2.5"
rayon = "1.8"
num_cpus = "1.16"
sha2 = "0.10"
hex = "0.4"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "multipart"] }
base64 = "0.22"
urlencoding = "2.1.3"
md5 = "0.7"

[features]
# Don't enable custom-protocol by default - only enable for production builds
default = []
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
